Img Clean & Theme Color Fixed

--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -1216,7 +1216,7 @@ footer .copyright {
   margin-bottom: 0;
 }
 footer .copyright a {
-  color: #337ab7;
+  color: #c50505;
 }
 footer .copyright a:hover,
 footer .copyright a:focus {
