--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -83,7 +83,7 @@
       <a target="_blank" href="https://www.douban.com/people//{{ site.douban_username }}">
         <span class="fa-stack fa-lg">
           <i class="fa fa-circle fa-stack-2x"></i>
-          <i class="fa fa-linkedin fa-stack-1x fa-inverse">豆</i>
+          <i class="fa fa-douban fa-stack-1x fa-inverse">豆</i>
         </span>
       </a>
     </li>
